[EFL] <input type="number"> is not a spinbutton https://bugs.webkit.org/show_bug.cgi?id=86846

Patch by Alexander Shalamov <alexander.shalamov@intel.com> on 2012-05-31
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Implemented adjustInnerSpinButtonStyle and
paintInnerSpinButton in RenderThemeEfl.

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::applyEdjeStateFromForm):
(WebCore::RenderThemeEfl::edjeGroupFromFormType):
(WebCore::RenderThemeEfl::adjustInnerSpinButtonStyle):
(WebCore):
(WebCore::RenderThemeEfl::paintInnerSpinButton):
* platform/efl/RenderThemeEfl.h:
(RenderThemeEfl):

Source/WebKit/efl:

Implemented spinner widget.

* DefaultTheme/default.edc:
* DefaultTheme/widget/spinner/sp_bg.png: Added.
* DefaultTheme/widget/spinner/sp_down_default.png: Added.
* DefaultTheme/widget/spinner/sp_down_hover.png: Added.
* DefaultTheme/widget/spinner/sp_down_pressed.png: Added.
* DefaultTheme/widget/spinner/sp_up_default.png: Added.
* DefaultTheme/widget/spinner/sp_up_hover.png: Added.
* DefaultTheme/widget/spinner/sp_up_pressed.png: Added.
* DefaultTheme/widget/spinner/spinner.edc: Added.

LayoutTests:

Unskip spinbutton layout tests.

* platform/efl/test_expectations.txt:

Canonical link: https://commits.webkit.org/105875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119195 268f45cc-cd09-0410-ab3c-d52691b4dbfc